added messaging app

--- a/cosajobs/templates/aboutjob.html
+++ b/cosajobs/templates/aboutjob.html
@@ -5,7 +5,7 @@
 <!--container for job details-->
 <div class="job_details">
 
-    <div class="job_profile"> 
+    <div class="aboutjobs_job_profile"> 
 
         
         <div class="job_pic" >
@@ -51,6 +51,9 @@
                         <li class="items">{{q}}</li>
 
                     {% endfor %}
+
+                    <!--send message button-->
+                    
                 </div>
             </div>
 
