--- a/cosajobs/templates/base.html
+++ b/cosajobs/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'test/test.css' %}">
     <link rel="stylesheet" href="{% static 'aboutjob.css' %}">
+    <link rel="stylesheet" href="{% static 'status/css/status.css' %}">
     <title>Document</title>
 </head>
 <body>
@@ -20,5 +21,10 @@
 
     {% endblock %}
     
+<!--scripts-->
+<script src="{% static 'jquery/jquery.js' %}"></script>
+<script src="{% static 'js/test.js' %}"></script>
+
+
 </body>
 </html>
