--- a/cosajobs/assets/test/test.css
+++ b/cosajobs/assets/test/test.css
@@ -22,12 +22,19 @@ body
     margin-left: 30px;
     position: relative;
     bottom: 15px;
+    text-decoration: none;
+    color:yellow;
+
 }
 
 .profile_info
 {
     width: 100%;
     height: 100px;
-    background-color: orangered;
+    background-color: darkslategrey;
 }
 
+.job
+{
+    background-color: rgb(131, 130, 124);
+}
