--- a/cosajobs/templates/index.html
+++ b/cosajobs/templates/index.html
@@ -15,6 +15,9 @@
 
     {% block content %}
 
+    <!--navigation bar-->
+    {% include 'navigation/navigation.html' %}
+
     <!--job display design-->
     {% for job in jobs  %}
     <div id="main">
