--- a/cosajobs/templates/status/status.html
+++ b/cosajobs/templates/status/status.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+{% include 'navigation/navigation.html' %}
 <!-- status container-->
 <div id="status_container">
+
+   
 
     <div id="status_bar">
         <h3 id="status_tag">Active Status</h3>
