--- a/cosajobs/templates/base.html
+++ b/cosajobs/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,8 +23,9 @@
     {% endblock %}
     
 <!--scripts-->
-<script src="{% static 'jquery/jquery.js' %}"></script>
-<script src="{% static 'js/test.js' %}"></script>
+<script src="{% static 'jquery/jquery.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/test.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/aboutjob/aboutjob.js' %}" type="text/javascript"></script>
 
 
 </body>
